# tableau-agent-prac

./: .env.example  .gitignore  README.md  dump.md  main.py  pyproject.toml
.claude/: CLAUDE.md
docs/: architecture_plan.md  relationship_map_strategy.md  tableau_mcp_guide.md  tableau_vds_guide.md  user_scenarios.md
src/: config.py  db.py  fetch_step01.py  health_check.py  main_agent.py  monitor.html  tableau_mcp.py  test_connections.py  web_app.py
src/routers/: chat.py  glossary.py  guideline.py
src/static/: style.css
src/templates/: index.html
